# realtime-api-workshop

./: README.md  pyproject.toml  requirements.txt
00-websocket-basics/: README.md  client.py  index.html  server.py  workshop.md
01-getting-started-function-calling/: .env.sample  README.md  assistant_service.py  chat.py  realtime2.py  workshop.md
01-getting-started-realtime-api/: EXERCISE-BILLING-ASSISTANT.md  assistant_service.py  chat.py  realtime2.py
01-getting-started-realtime-api/agents/: activation.py  root.py
01-getting-started-realtime-api/solution/: README.md  tasks.py
01-getting-started-realtime-api/solution/agents/: billing.py  technical.py
02-building-multi-agent-system/: EXERCISE-BILLING-ASSISTANT.md  README.md  chat.py  realtime2.py  tasks.py  workshop.md
02-building-multi-agent-system/agents/: technical.py
02-building-multi-agent-system/solution/: assistant_service.py  chat.py
02-building-multi-agent-system/solution/agents/: billing.py  root.py  technical.py
02-getting-started-realtime-api/: EXERCISE-BILLING-ASSISTANT.md
02-getting-started-realtime-api/agents/: root.py  technical.py
02-getting-started-realtime-api/solution/: assistant_service.py  chainlit.config.json  chat.py
02-getting-started-realtime-api/solution/agents/: sales.py
02-voice-rag/: README.md
03-voice-rag/: README.md  advanced-exercises.md
infra/: main.bicep
infra/modules/: dependent_resources.bicep
